@@ -100,6 +100,9 @@ x^4 - 113*x^3 - 1872*x^2 - 6208*x + 8192
 [0, 0]
 [8*x^6 - 34*x^4 + 17*x^2 - 1, 48*x^5 + 120*x^4 + 24*x^3 - 84*x^2 - 54*x - 9]
 0
+[]
+[2800*x^6 + 7704*x^5 + 8098*x^4 + 4272*x^3 + 1207*x^2 + 174*x + 10, 2800*x^6
+ + 7704*x^5 + 8098*x^4 + 4272*x^3 + 1207*x^2 + 174*x + 10]
 8*x^6 - 34*x^4 + 17*x^2 - 1
 48*x^5 + 120*x^4 + 24*x^3 - 84*x^2 - 54*x - 9
 [[[1, 1; -5, 0; 0, -5], [0, -1; 5, 1], 5, Vecsmall([1, 2])], [[1; 0; 0], Mat
@@ -311,4 +314,4 @@ O(11^7) + (10 + 3*11 + 6*11^2 + 9*11^3 + 8*11^4 + 5*11^5 + O(11^6))*x + (6 +
 5^13 + 3*5^14 + 4*5^15 + 3*5^16 + 4*5^17 + 2*5^18 + O(5^19), O(5^19), 4 + 5 
 + 4*5^4 + 4*5^5 + 3*5^8 + 5^11 + 3*5^12 + 5^13 + 3*5^14 + 5^15 + 5^16 + 3*5^
 17 + 4*5^18 + O(5^19)]
-Total time spent: 2284
+Total time spent: 3723
