@@ -74,6 +74,8 @@ mseval(W,[0,0])
 s=msnew(W)[1][,1];
 mseval(W,s)
 mseval(W,s,[0,0])
+mseval(W,[;],[1/3,1/2])
+mseval(W,Mat([s,s]),[1/3,1/2])
 mseval(W,s,g[1])
 mseval(W,s,g[2])
 
